--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
           To create a production bundle, use `npm run build` or `yarn build`.
         -->
     <script type="module" src="/src/index.jsx"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </body>
 </html>
