--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <title>Berry - React Material Free Admin Dashboard Template</title>
-    <link rel="icon" href="/favicon.svg" />
+    <link rel="icon" href="/src/assets/images/Exotic Online Adv Logo-01.png" />
     <!-- Meta Tags-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2296f3" />
-    <meta name="title" content="Berry - React Material Admin Dashboard Template by CodedThemes" />
+    <meta name="title" content="Exotic Online Advertisement" />
     <meta
       name="description"
-      content="Start your next React project with Berry admin template. It build with Reactjs, Material-UI, Redux, and Hook for faster web development."
+      content="Exotic Online Advertisement"
     />
     <meta
       name="keywords"
-      content="react admin template, material-ui react dashboard template, reactjs admin template, reactjs dashboard, react backend template"
+      content="Exotic Online Advertisement"
     />
     <meta name="author" content="CodedThemes" />
   </head>
