--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Berry - React Material Free Admin Dashboard Template</title>
+    <title>Exotic Online Advertisement</title>
     <link rel="icon" href="/src/assets/images/Exotic Online Adv Logo-01.png" />
     <!-- Meta Tags-->
     <meta charset="utf-8" />
